Verify reported API version via jshell